# drake

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  Doxyfile  README.md  lint_results.txt  output_force.sh  output_state.sh  plot_rod_force.py  plot_rod_state.py  test_results.txt
common/: BUILD.bazel  actuator_demultiplexer.cc  const_char_key_unordered_map.h  const_char_key_unordered_multimap.h  logging.cc  sorted_pair.cc  sorted_pair.h  text_logging.h
common/test/: actuator_demultiplexer_test.cc  debug_test.cc  release_test.cc
demo/: main.cc
drake/doc/: developers.rst  jenkins.rst
drake/solvers/: moby_lcp_solver.cc  moby_lcp_solver.h
drivers/: chopstick_driver.cc
drivers/chopstick/: chopstick_impedance_controller.cc  chopstick_kinematics.cc
drivers/test/: chopstick_driver_test.cc
examples/2d_gripper/: 2d_prismatic_gripper_simulation.py
examples/atlas/: atlas_run_dynamics.cc
examples/bug/: BUILD.bazel  bug.cc  bug.sdf
examples/contact_model/: BUILD.bazel  bowling_ball.cc  sliding_bricks.cc
examples/elastic/: BUILD.bazel  block.cc  block.urdf
examples/fibonacci/: fibonacci.h  run_fibonacci.cc
examples/iiwa_soccer/: box_controller.py  fsm_system.h  soccer_common.h
examples/kuka_iiwa_arm/: kuka_plan_runner.cc  kuka_simulation.cc
examples/manipulation_station/: BUILD.bazel  combined_iiwa_wsg.cc  combined_iiwa_wsg.h  combined_iiwa_wsg.py  combined_manipulator_and_gripper_model.h  end_effector_teleop_mouse.py  joint_teleop.py  manipulation_station.cc  manipulation_station.h  manipulation_station.py  manipulation_station_hardware_interface.cc  manipulation_station_setup.h  mock_station_simulation.py  proof_of_life.cc  proof_of_life.py  robot_model.h
examples/multibody/hydrostatic/: BUILD.bazel  brick_vs_halfspace.cc
examples/planar_gripper/: brick_static_equilibrium_constraint.cc  gripper_brick.cc  planar_gripper_common.cc  planar_gripper_simulation.cc
examples/quadrotor/: run_quadrotor_dynamics.cc
examples/rod2d/: BUILD.bazel  normal_accel_witness.h  normal_force_witness.h  normal_vel_witness.h  rod2d-inl.h  rod2d.h  rod2d_sim.cc  rod_witness_function.h  signed_distance_witness.h  sliding_witness.h  sticking_friction_forces_slack_witness.h
examples/schunk_wsg/: BUILD.bazel
examples/simple_gripper/: simple_gripper.cc
examples/valkyrie/: valkyrie_simulation.cc
geometry/: BUILD.bazel  composite_multibody_plant_scene_graph_diagram.h  contact_surface.cc  contact_surface.h  geometry_state.h  multibody_plant_scene_graph.cc  multibody_plant_scene_graph.h  multibody_plant_scenegraph.cc  multibody_plant_scenegraph.h  polygonal_mesh.h  proximity_engine.cc  proximity_engine.h  query_object.cc  query_object.h  tetrahedron.h
geometry/query_results/: BUILD.bazel  contact_surface.cc  contact_surface.h  field.h  mesh_field.h  surface_mesh.h  tetrahedron.h
include/DR/: config.h  model_generator.h  shape_to_unit_inertia.h
lcmtypes/: BUILD.bazel  lcmt_contact_surface_for_viz.lcm  lcmt_contact_surface_tri_for_viz.lcm  lcmt_contact_surfaces_for_viz.lcm
manipulation/planner/: constraint_relaxing_ik.h  robot_plan_interpolator.cc
manipulation/util/: move_ik_demo_base.cc
math/: 2d_and_3d_projection_matrices.cc  2d_and_3d_projection_matrices.h  BUILD.bazel  project_3d_to_2d.cc  project_3d_to_2d.h
math/test/: 2d_and_3d_projection_matrices_test.cc
models/chopstick/: chopstick.xacro  chopstick_left.sdf.xacro  chopstick_right.sdf.xacro  generate_models.sh
models/objects/: truck.obj.mtl
multibody/: rigid_body.h  rigid_body_tree.cc
multibody/constraint/: BUILD.bazel  constraint_problem_data.h  constraint_solver.h  point_contact.h  slack_variable_data.h
multibody/contact_model/: BUILD.bazel  hydrostatic_contact_model.cc  hydrostatic_contact_model.h
multibody/multibody_tree/: multibody_tree.cc  multibody_tree.h
multibody/parsing/: detail_sdf_parser.cc  detail_urdf_parser.cc  process_model_directives.cc  scoped_names.cc
multibody/plant/: BUILD.bazel  augmented_contact_surface.cc  augmented_contact_surface.h  contact_surfaces_to_lcm.cc  contact_surfaces_to_lcm.h  multibody_plant.cc  multibody_plant.h
multibody/rigid_body_plant/: BUILD.bazel  aabb.cc  aabb.h  additional_contact_witness.h  euclidean_distance_witness-inl.h  euclidean_distance_witness.cc  euclidean_distance_witness.h  normal_separation_witness.h  point_contact.cc  point_contact.h  project_3d_to_2d.cc  project_3d_to_2d.h  rigid_body_plant.cc  rigid_body_plant.h  rigid_body_plant_witness_function.h  signed_distance_witness.h  tangential_separation_witness.h  tri_tri_contact_data.cc  tri_tri_contact_data.h  triangle-inl.h  triangle.cc  triangle.h  trimesh.cc  trimesh.h  trimesh_coldet-inl.h  trimesh_coldet.cc  trimesh_coldet.h
multibody/test_utilities/: add_fixed_objects_to_plant.h
multibody/tree/: BUILD.bazel  multibody_tree.h  string_view_map_key.h
multibody_world/: multibody_world.h
multibody_world/test/: multibody_world_test.cc
primitives/: impedance_controller.cc  primitive_behavior.cc  state_machine.cc
primitives/test/: impedance_controller_test.cc  primitive_behavior_test.cc  state_machine_controller_test.cc  state_machine_test.cc
scripts/: check_tests.sh  lint.sh  run_tests.sh  testing.bash
simulation/: controller_generator.cc  model_generator.cc  shape_to_unit_inertia.cc  simulation_facade.cc  simulation_generator.cc  state_setter.cc
simulation/test/: body_simulation_driver.h  full_simulation_test.cc  model_generator_test.cc  simple_env_test.cc  simulation_facade_test.cc
solvers/: moby_lcp_solver.cc  unrevised_lemke_solver.cc  unrevised_lemke_solver.h
src/: model_generator.cc
systems/: discrete_systems.h
systems/analysis/: BUILD.bazel  bogacki_shampine3_integrator-inl.h  bogacki_shampine3_integrator.cc  bogacki_shampine3_integrator.h  implicit_euler_integrator-inl.h  implicit_integrator-inl.h  implicit_integrator.h  integrator_base.h  radau3_integrator-inl.h  radau3_integrator.cc  radau3_integrator.h  radau_integrator.h  simulator.h
test/: simple_env_test.cc
tools/: differential_inverse_kinematics.cc  sobol_sequence.cc
(+234 files in other folders)
