# -*- python -*-

load(
    "//tools:drake.bzl",
    "drake_cc_binary",
)
load("//tools/install:install_data.bzl", "install_data")
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

drake_cc_binary(
    name = "block",
    srcs = ["block.cc"],
    add_test_rule = 1,
    data = ["block.urdf"],
    test_rule_args = [
        " --sim_duration=0.01",
        " --playback=false",
    ],
    deps = [
        "//common:find_resource",
        "//lcm",
        "//multibody:rigid_body_tree_construction",
        "//multibody/parsers",
        "//multibody/rigid_body_plant",
        "//multibody/rigid_body_plant:drake_visualizer",
        "//systems/analysis",
        "//systems/primitives:constant_vector_source",
        "@gflags",
    ],
)

install_data()

add_lint_tests()
