# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = ["//visibility:public"],
)

drake_cc_package_library(
    name = "contact_model",
    deps = [
        ":hydrostatic_contact_model",
    ],
)

drake_cc_library(
    name = "hydrostatic_contact_model",
    srcs = [],
    hdrs = [
        "hydrostatic_contact_model.h",
    ],
    deps = [
        "//multibody/multibody_tree",
    ],
)

add_lint_tests()
